force-app/main/default/objects/cgcloud__Promotion_Product_Share__c/cgcloud__Promotion_Product_Share__c.object-meta.xml
<CustomObject>
    <description>This object holds the details of categories assigned to a promotion.</description>
    <label>Promotion Product Share</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Promotion Product Share Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Product Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>