force-app/main/default/objects/cgcloud__Promotion_Product_Share__c/fields/cgcloud__Parent_Promotion_Product_Share__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Promotion_Product_Share__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the parent promotion link for this record</description>
    <label>Parent Promotion Product Share</label>
    <referenceTo>cgcloud__Promotion_Product_Share__c</referenceTo>
    <relationshipLabel>Child Promotion Product Shares</relationshipLabel>
    <relationshipName>ChildPromotionProductShares</relationshipName>
    <type>Lookup</type>
</CustomField>