force-app/main/default/objects/cgcloud__Promotion_Product_Share__c/fields/cgcloud__Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Category/Brand/... which is assigned to the promotion.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Promotion Product Shares</relationshipLabel>
    <relationshipName>Promotion_Product_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>