force-app/main/default/objects/cgcloud__Promotion_Product_Share__c/fields/cgcloud__Promotion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion__c</fullName>
    <description>Promotion to which the categories/brands/... are assigned</description>
    <label>Promotion</label>
    <referenceTo>cgcloud__Promotion__c</referenceTo>
    <relationshipLabel>Promotion Product Shares</relationshipLabel>
    <relationshipName>Promotion_Product_Shares</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>